<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Proyecto 5 Menu Entrada</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings_activity">Settings_activity</string>
    <string name="btntext">Activar cámara</string>
    <string name="urifoto">Archivo</string>
    <string name="btncam">Ir a cámara</string>
    <string name="title_activity_reproductor">Reproductor</string>
    <string name="title_activity_like_">Like Activity</string>
    <string name="title_activity_dis_like_">DisLike Activity</string>
    <string name="fix_string">Arreglar</string>
    <string name="title_activity_formulario">Formulario</string>
    <string name="label_id">Id: </string>
    <string name="label_nombre_item">Opinión</string>
    <string name="crear">Nuevo Item</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="hipoteca_crear_item">Añadir Item</string>
    <string name="title_activity_like">LikeActivity</string>
    <string name="btn_imagen">Imagen</string>
    <string name="tVUri">Uri</string>
    <string name="tV_desc">Descripcion</string>

</resources>
